--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,21 @@
   <groupId>demo.matt.java</groupId>
   <artifactId>FunctionalDemo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+
+    <build>
+        <plugins>
+        
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.3</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
+        
+        </plugins>
+    </build>
+
 </project>
